Changelog
=========

All notable changes to this project will be documented in this file.

The format is based on `Keep a Changelog <http://keepachangelog.com/>`_
and this project adheres to `Semantic Versioning <http://semver.org/>`_

UNRELEASED VERSION
------------------

0.3.13 - 2019-01-07
-------------------

Fixed
~~~~~

- Import problem in Python 2 which broke xnatpy

0.3.12 - 2019-01-03
-------------------

Added
~~~~~

- Adds fields argument to the dicom_dump method to filter on dicom tags server side.
- Adds dicom_dump method to prearchive scan.
- Allow deleting variables by useing del object.variable, this works in most
  cases but seem to fail server-side on restriction such as gender (it does
  not match any valid options)

Changed
~~~~~~~

- Beter computation for the uri's of resources

Fixed
~~~~~

- Fixed xml deprecation warning due to the use of .getchildren()

0.3.11 - 2018-11-12
-------------------

Fixed
~~~~~

- Functions with an async parameter had them renamed to asynchronous as async
  is a keyword as of Python 3.7
- Fix a bug in the XSD parsing when an XSD contains a schema-level simpleType
- Bug in upload_dir with python3 when using a method based on a temporary file

Added
~~~~~

- Resource upload methods can now forward kwargs to the ``connection.upload``
  method.
- Resource constructor also optionally takes a ``data_dir`` and ``upload_method``
  arguments for uploading data immediately after creation.


0.3.10 - 2018-08-31
-------------------

Added
~~~~~

- The experiment.create_resource and scan.create_resource now take two extra
  arguments: data_dir and method, which allow the uploading of the content of
  a directory as the content of the newly created resource. The method is the
  method for resource.upload_dir method
- Command line callable scripts that copies an entire project to another xnat.
  See ``xnat_cp_project --help``

Changed
~~~~~~~

- Removed wrong default argument for create_assessor (invalid assessor type)